--- a/charts/pulse.htm
+++ b/charts/pulse.htm
@@ -2,159 +2,13 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<title>Highcharts Example</title>
-
+		<title>Параметры пульса</title>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-		<script type="text/javascript">
-$(function () {
-    $(document).ready(function() {
-
-        var chart;
-
-        var array = [
-            {y: 70, tooltip: 'Фарингосепт'},
-            {y: 75, tooltip: 'Анальгин'},
-            {y: 80, tooltip: 'Анальгин'},
-            {y: 110, tooltip: 'Анальгин'},
-            {y: 80, tooltip: 'Анальгин'},
-            {y: 50, tooltip: 'Анальгин'},
-            {y: 40, tooltip: 'Анальгин'},
-            {y: 30, tooltip: 'Анальгин'},
-            {y: 60, tooltip: 'Анальгин'},
-            {y: 110, tooltip: 'Анальгин'},
-            {y: 80, tooltip: 'Анальгин'},
-            {y: 40, tooltip: 'Анальгин'},
-            {y: 50, tooltip: 'Анальгин'},
-            {y: 110, tooltip: 'Анальгин'},
-            {y: 90, tooltip: 'Анальгин'},
-            {y: 110, tooltip: 'Анальгин'},
-            {y: 50, tooltip: 'Анальгин'},
-            {y: 110, tooltip: 'Анальгин'},
-            {y: 80, tooltip: 'Анальгин'},
-            {y: 70, tooltip: 'Анальгин'},
-            {y: 75, tooltip: 'Анальгин'},
-            {y: 80, tooltip: 'Анальгин'},
-            {y: 90, tooltip: 'Анальгин'},
-            {y: 110, tooltip: 'Анальгин'}
-        ];
-
-        var options = {
-            chart: {
-                renderTo: 'container',
-                type: 'spline'
-            },
-            title: {
-                text: 'Параметры пульса'
-            },
-            subtitle: {
-                text: 'с октября 1999 до ноября 2012'
-            },
-            xAxis: {
-                type: 'datetime'
-            },
-            yAxis: {
-                title: {
-                    text: 'Пульс'
-                },
-                min: 0,
-                max: 160,
-                minorGridLineWidth: 0,
-                gridLineWidth: 1,
-                alternateGridColor: null,
-                plotLines: [{
-                    value: 0,
-                    width: 1,
-                    color: '#808080'
-                }],
-                plotBands: [{ // Light air
-                    from: 50,
-                    to: 80,
-                    color: 'rgba(0, 255, 0, 0.1)',
-                    label: {
-                        text: 'Норма',
-                        style: {
-                            color: '#606060'
-                        }
-                    }
-                }, { // Light breeze
-                    from: 80,
-                    to: 120,
-                    color: 'rgba(255, 0, 0, 0.1)',
-                    label: {
-                        text: 'Выше нормы',
-                        style: {
-                            color: '#606060'
-                        }
-                    }
-                }]
-            },
-            tooltip: {
-                formatter: function() {
-
-
-                        return '' +
-                        '<b>' + this.point.config + '</b><br><br>' +
-                        Highcharts.dateFormat('%d %b %Y', this.x) +': '+ '<b>' + this.y + ' уд/м </b>';
-                }
-            },
-            plotOptions: {
-                spline: {
-                    lineWidth: 4,
-                    states: {
-                        hover: {
-                            lineWidth: 5
-                        }
-                    },
-                    marker: {
-                        enabled: true,
-                        radius: 5,
-                        states: {
-                            hover: {
-                                enabled: true,
-                                symbol: 'circle',
-                                radius: 5,
-                                lineWidth: 1
-                            }
-                        }
-                    },
-                    pointInterval: 7 * 24 * 3600 * 1000 * 4, // one hour
-                    pointStart: Date.UTC(2009, 9, 6, 0, 0, 0)
-                }
-            },
-            series: [{
-                name: 'Пульс',
-                data: [],
-                cursor: 'pointer'
-            }]
-            ,
-            navigation: {
-                menuItemStyle: {
-                    fontSize: '10px'
-                }
-            }
-        };
-
-        $.getJSON('loadData.php', function(data) {
-            yData = options.series[0].data;
-
-            tooltip = options.tooltip.config;
-
-            for (i = 0; i < data.length; i++) {
-                yData.push(parseFloat(data[i]['data']));
-            }
-
-            chart = new Highcharts.Chart(options);
-        });
-    });
-    
-});
-		</script>
+        <script src="js/highcharts.js"></script>
+        <script src="js/exporting.js"></script>
+        <script src="js/reports.js"></script>
 	</head>
 	<body>
-<script src="js/highcharts.js"></script>
-<script src="js/exporting.js"></script>
-
-<div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
-
+        <div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 	</body>
 </html>
