--- a/charts/pulse.htm
+++ b/charts/pulse.htm
@@ -5,10 +5,13 @@
 		<title>Параметры пульса</title>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="js/highcharts.js"></script>
+        <script src="js/highcharts-more.js"></script>
         <script src="js/exporting.js"></script>
         <script src="js/reports.js"></script>
+        <script src="js/speed.js"></script>
 	</head>
 	<body>
         <div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+        <div id="container-2" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 	</body>
 </html>
