demo has been changed

--- a/demo/show.htm
+++ b/demo/show.htm
@@ -49,13 +49,29 @@
 </div>
 <div role="main">
         <div class="span3 bs-docs-sidebar">
-            <ul class="nav nav-list bs-docs-sidenav affix">
-                <li class="active"><a href="#overview"><i class="icon-chevron-right"></i> Общая информация</a></li>
-                <li><a href="#transitions"><i class="icon-chevron-right"></i> Общий анамнез</a></li>
-                <li><a href="#modals"><i class="icon-chevron-right"></i> Наблюдения и анализы</a></li>
-                <li><a href="#systems"><i class="icon-chevron-right"></i> Системы</a></li>
-                <li><a href="#dropdowns"><i class="icon-chevron-right"></i> Запись</a></li>
-            </ul>
+            <div class="affix">
+                <ul class="nav nav-list bs-docs-sidenav">
+                    <li class="active"><a href="#overview"><i class="icon-chevron-right"></i> Общая информация</a></li>
+                    <li><a href="#transitions"><i class="icon-chevron-right"></i> Общий анамнез</a></li>
+                    <li><a href="#modals"><i class="icon-chevron-right"></i> Наблюдения и анализы</a></li>
+                    <li><a href="#systems"><i class="icon-chevron-right"></i> Системы</a></li>
+                    <li><a href="#dropdowns"><i class="icon-chevron-right"></i> Запись</a></li>
+                </ul>
+                <div class="well sidebar-nav">
+                    <ul class="nav nav-list">
+                        <li class="nav-header">Жалобы</li>
+                        <li><a href="#">болевые ощущения</a></li>
+                        <li><a href="#">гнойное отделяемое</a></li>
+                        <li><a href="#">для контрольного осмотра</a></li>
+                        <li><a href="#">для осмотра глазного дна</a></li>
+                        <li><a href="#">светобоязнь</a></li>
+                        <li><a href="#">светотечение</a></li>
+                        <li><a href="#">жжение</a></li>
+                        <li><a href="#">для подбора очков</a></li>
+                        <li><a href="#">жалобы на усталость зрения</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
         <div class="span9">
             <section id="overview">
@@ -272,22 +288,6 @@
                 </p>
             </section>
         </div>
-    <div class="span3">
-        <div class="well sidebar-nav affix">
-            <ul class="nav nav-list">
-                <li class="nav-header">Жалобы</li>
-                <li><a href="#">болевые ощущения</a></li>
-                <li><a href="#">гнойное отделяемое</a></li>
-                <li><a href="#">для контрольного осмотра</a></li>
-                <li><a href="#">для осмотра глазного дна</a></li>
-                <li><a href="#">светобоязнь</a></li>
-                <li><a href="#">светотечение</a></li>
-                <li><a href="#">жжение</a></li>
-                <li><a href="#">для подбора очков</a></li>
-                <li><a href="#">жалобы на усталость зрения</a></li>
-            </ul>
-        </div>
-    </div>
 </div>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
