--- a/demo/index.htm
+++ b/demo/index.htm
@@ -60,7 +60,41 @@
             <button type="button" class="close" data-dismiss="alert">×</button>
         </div>
         <form class="form-search">
-            <input type="text" class="input-medium search-query" placeholder="Введите имя">
+            <input type="text" class="input-medium search-query" id="tags" placeholder="Введите имя">
+            <span class="help-inline">Возраст</span>
+            <select class="span1">
+                <option value="0">от</option>
+                <option value="1">20</option>
+                <option value="2">25</option>
+                <option value="3">30</option>
+                <option value="4">35</option>
+                <option value="5">40</option>
+                <option value="6">45</option>
+                <option value="7">50</option>
+                <option value="8">55</option>
+                <option value="9">60</option>
+                <option value="10">65</option>
+                <option value="11">70</option>
+                <option value="12">75</option>
+                <option value="13">80</option>
+            </select>
+            <select class="span1">
+                <option value="0">до</option>
+                <option value="1">20</option>
+                <option value="2">25</option>
+                <option value="3">30</option>
+                <option value="4">35</option>
+                <option value="5">40</option>
+                <option value="6">45</option>
+                <option value="7">50</option>
+                <option value="8">55</option>
+                <option value="9">60</option>
+                <option value="10">65</option>
+                <option value="11">70</option>
+                <option value="12">75</option>
+                <option value="13">80</option>
+                <option value="14">...</option>
+            </select>
             <button type="submit" class="btn">Найти</button>
         </form>
         <table class="table table-striped">
@@ -368,6 +402,10 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.0.min.js"><\/script>')</script>
+
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
+<script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
+
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 
